--- a/app/views/contracts/show.html.erb
+++ b/app/views/contracts/show.html.erb
@@ -21,12 +21,19 @@
     <div class="card">
       <div class="card-header">
         <h3>
-          <%= t ".id"%><%= @contract.id %>
-          &nbsp;&nbsp;
-          <span class="badge badge-<%= modify_label_color @contract.status_id %>"><%= @contract.status_name %></span>
+          <div class="d-flex flex-row">
+            <%= t ".id"%><%= @contract.id %>
+            &nbsp;&nbsp;
+            <div id="show_status_name">
+              <span class="badge badge-<%= modify_label_color @contract.status_id %>"><%= @contract.status_name %></span>
+            </div>
+          </div>
         </h3>
       </div>
       <div class="card-body">
+        <div id="show-deny-message">
+          <%= render "contracts/show_deny_message", contract: @contract %>
+        </div>
         <div class="row">
           <div class="col-12 col-md-12 col-lg-8 order-2 order-md-1">
             <div class="row">
@@ -124,12 +131,7 @@
               </p>
             </div>
             <div class="text-center mt-5 mb-3" id="contract-detail-btn">
-              <% options = modify_contract_action @contract.status_id %>
-                  <% options.each do |val| %>
-                    <% button_name = convert_id_to_name val %>
-                    <% button_color = modify_label_color val %>
-                    <%= link_to t(".#{button_name}"), "#", class: "btn btn-lg btn-#{button_color}"%>
-                  <% end %>
+              <%= render "contracts/approve_deny_button", contract: @contract %>
             </div>
           </div>
         </div>
