[Task][27044] [Manager] Xem danh sách các hợp đồng

--- a/app/views/layouts/_employee_navbar.html.erb
+++ b/app/views/layouts/_employee_navbar.html.erb
@@ -30,9 +30,7 @@
         <% end %>
       <% end %>
       <div class="dropdown-menu dropdown-menu-right p-0">
-        <%= link_to t(".english"), {locale: :en}, class: "dropdown-item" do %>
-
-        <% end %>
+        <%= link_to t(".english"), {locale: :en}, class: "dropdown-item" %>
         <%= link_to t(".vietnamese"), {locale: :vi}, class: "dropdown-item" %>
       </div>
     </li>
