--- a/app/views/layouts/_employee_sidebar.html.erb
+++ b/app/views/layouts/_employee_sidebar.html.erb
@@ -18,7 +18,7 @@
     <nav class="mt-2">
       <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
         <li class="nav-item">
-          <%= link_to "#", class: "nav-link" do %>
+          <%= link_to contracts_path, class: "nav-link" do %>
             <i class="nav-icon fas fa-tachometer-alt"></i>
             <p><%= t ".contracts" %></p>
           <% end %>
