[TASK][27058]user_show_terminal_info

--- a/app/assets/stylesheets/abstract/_variables.scss
+++ b/app/assets/stylesheets/abstract/_variables.scss
@@ -2,3 +2,10 @@ $gray-medium-light-1: #D7DBDD;
 $gray-medium-light-2: #CACFD2;
 $form-error-red: #dc3545;
 $home-background: rgba(86, 127, 170, 0.76);
+$gray-1: #3e3d3d;
+$gray-medium-light-3 :#e6e6e6;
+$header-border: rgba(0,0,255,0.4);
+$yellow-1: #ffbc00;
+$link: #2f2ff1;
+$purple-1: #ccf;
+
