--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,23 @@
 @import 'libs/all.css';
 @import 'abstract/_variables.scss';
 @import 'toastr/toastr.scss';
+// @import 'slot/show.css';
+@import 'slot/list_slot.scss';
+// @import 'slot/slotinfo.scss';
 
+
+ * {
+   font-family: "Apercu",Avenir,-apple-system,BlinkMacSystemFont,"Helvetica Neue",Helvetica,"Calibri","Roboto",Arial,sans-serif;
+   margin: 0;
+   padding: 0;
+ }
+ nav.main-header {
+   position: fixed !important;
+   width: 96% !important;
+ }
+ .main-sidebar{
+  position: fixed !important;
+}
 #error_explanation {
   color: red;
   ul {
@@ -103,3 +119,44 @@
   width: 20px;
   height: auto;
 }
+
+#terminal-info {
+  margin: 70px 70px;
+  width: 100%;
+  height: 100%;
+}
+
+#terminal-content {
+  padding-top: 50px;
+  overflow: auto;
+}
+
+.my-full {
+  width: 100%;
+}
+
+#slot-content{
+  margin-left: 150px;
+}
+
+.slot-card {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #D9E4EA;
+  border-radius: 10px;
+  margin-top: 20px;
+  background-color: white;
+}
+
+#slot-img-box{
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.slot-img {
+  width: 100%;
+  height: 170px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
