--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,30 +1,70 @@
 <% provide :title, t(".title") %>
-<div class="content-header">
-  <div class="container-fluid">
-    <div class="row mb-2">
-      <div class="col-sm-6">
-        <h1 class="m-0 text-dark"><%= t ".welcome" %></h1>
+  <main>
+    <section class="ray-page container">
+      <ul class="ray-breadcrumbs">
+        <li class="ray-breadcrumb">
+          <a href="#"><%= t ".all_terminal" %> </a>
+        </li>
+      </ul>
+    </section>
+    <section class="content container">
+      <div class="header">
+        <div class="header__right">
+          <h1> <%= t ".content_title" %> </h1>
+          <span>
+            <div class="dropdown show">
+              <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <%= t ".terminal_dropdown" %>
+              </a>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <% Terminal.all.each do |terminal| %>
+                      <%= link_to terminal, class: "dropdown-item" do %>
+                        <p><%= terminal.name %></p>
+                      <% end %>
+                  <% end %>
+              </div>
+            </div>
+          </span>
+        </div>
+        <div class="header__left">
+          <p> <%= t ".address" %> </p>
+        </div>
       </div>
-      <div class="col-sm-6">
-        <ol class="breadcrumb float-sm-right">
-          <li class="breadcrumb-item"><%= link_to t(".home_breadcrumb"), root_path %></li>
-          <li class="breadcrumb-item active"><%= t ".welcome_breadcrumb" %></li>
-        </ol>
+      <div class="main">
+        <div class="main__left">
+          <div class="products">
+            <% @slots.each do |slot| %>
+              <%= link_to slot do %>
+                <div class="product">
+                  <%= link_to slot do %>
+                    <%= image_tag "https://www.mlive.com/resizer/YEU5ywOU3--21qj7nAlYwDOT_64=/1280x0/smart/arc-anglerfish-arc2-prod-advancelocal.s3.amazonaws.com/public/4G27NNGGWJDYHIBIL2YJQ6DVPA.jpg"%>
+                  <% end %>
+                  <div class="product__title">
+                    <%= link_to slot.name, slot %>
+                    <i class="fas fa-star"> <%= Settings.info.star %> </i>
+                  </div>
+                  <p class="product__text"><%= slot.terminal.name %> </p>
+                </div>
+              <% end %>
+            <% end %>
+            <div class="mt-4">
+              <%= paginate @slots, theme: "twitter-bootstrap-4", pagination_class: "pagination-sm",nav_class: "d-inline-b" %>
+            </div>
+            <div class="footer">
+              <h2><%= t ".question" %> </h2>
+              <p class="text__header"><%= t ".answer" %> </p>
+              <i class="fas fa-phone"><%= Settings.info.phone %> </i>
+            </div>
+          </div>
+          <div class="text">
+            <h2> <%= t ".description_title" %> </h2>
+            <p> <%= t ".description_content" %></p>
+            <a href="#"> <%= t ".address" %> </a>
+          </div>
+        </div>
+        <div class="main__right">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3719.3309818186235!2d105.80198221533867!3d21.218719886641136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135021539afc453%3A0xe6e0faa3520226b4!2zQ-G6o25nIGjDoG5nIGtow7RuZyBxdeG7kWMgdOG6vyBO4buZaSBCw6Bp!5e0!3m2!1svi!2s!4v1598076515519!5m2!1svi!2s" width="100%" height="800" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
       </div>
-    </div>
-  </div>
-</div>
-<div class="content" ></div>
-  <div class="container-fluid" id="home-content">
-    <div class="row" id="home-content-row">
-      <div class="col-lg-6">
-        <h5><%= t ".airport_name" %></h5>
-        <p class="overview"><%= t ".content_html" %></p>
-        <%= link_to t(".view_more"), Settings.links.airport, id: "view-more", target: "_blank" %>
-      </div>
-      <div class="col-lg-6">
-        <%= image_tag "/images/flight-attendant.png", id: "attendant", class: "img-circle" %>
-      </div>
-    </div>
-  </div>
-</div>
+    </section>
+  </main>
