--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,37 @@
+/*
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
+ * vendor/assets/stylesheets directory can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
+ * files in this directory. Styles in this file should be added after the last require_* statement.
+ * It is generally better to create a new file per style scope.
+ *= require_tree .
+ *= require_self
+ */
 @import 'bootstrap/scss/bootstrap';
 @import 'libs/adminlte.scss';
-@import 'libs/all.css';
 @import 'abstract/_variables.scss';
 @import 'toastr/toastr.scss';
+@import 'slot/slot_info.scss';
+@import 'slot/list_slot.scss';
+@import 'store/index.scss';
 
+ * {
+   font-family: sans-serif, "Apercu",Avenir,-apple-system,BlinkMacSystemFont,"Helvetica Neue",Helvetica,"Calibri","Roboto",Arial,"Font Awesome 5 Free" !important;
+   margin: 0;
+   padding: 0;
+ }
+ nav.main-header {
+   position: fixed !important;
+   width: 96% !important;
+ }
+ .main-sidebar{
+  position: fixed !important;
+}
 #error_explanation {
   color: red;
   ul {
@@ -102,4 +130,66 @@
   opacity: .8;
   width: 20px;
   height: auto;
+}
+
+#terminal-info {
+  margin: 70px 70px;
+  width: 100%;
+  height: 100%;
+}
+
+#terminal-content {
+  padding-top: 50px;
+  overflow: auto;
+}
+
+.my-full {
+  width: 100%;
+}
+
+#slot-content{
+  margin-left: 150px;
+}
+
+.slot-card {
+  width: 100%;
+  height: 100%;
+  border: 1px solid #D9E4EA;
+  border-radius: 10px;
+  margin-top: 20px;
+  background-color: white;
+}
+
+#slot-img-box{
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.slot-img {
+  width: 100%;
+  height: 170px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+#dropdownMenuLinkTerminal {
+  border-left: 0 !important;
+  p{
+    margin: 0 !important;
+    padding: 0.5rem 0 !important;
+    text-align: center;
+  }
+}
+
+#terminalItem {
+  flex-direction: column;
+  padding-top: 0 !important;
+}
+
+#contract-detail-btn .btn {
+  width: 25%;
+}
+
+#contract-detail {
+  font-size: 2.5rem;
 }
