--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,34 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= t ".store_management" %></title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Ionicons -->
-    <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-
-    <!-- Google Font: Source Sans Pro -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.1.0/css/flag-icon.min.css" rel="stylesheet">
-
-    <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
+    <title><%= yield :title %> | <%= t ".store_management" %></title>
+    <%= render "layouts/theme_default" %>
+    <%= render "layouts/rails_default" %>
   </head>
-
-  <body class="hold-transition sidebar-mini">
-    <div class="wrapper">
-      <%= render "layouts/navbar" %>
-      <%= render "layouts/sidebar" %>
-      <%= yield %>
-      <%= render "layouts/footer" %>
-    </div>
-  </body>
+  <% unless disable_layout? %>
+    <body class="sidebar-mini sidebar-collapse">
+      <div class="wrapper">
+        <%= render "layouts/navbar" %>
+        <%= render "layouts/user_sidebar" %>
+        <div class="content-wrapper">
+          <%= render "shared/flash_messages" %>
+          <%= yield %>
+        </div>
+        <%= render "layouts/footer" %>
+      </div>
+    </body>
+  <% else %>
+    <%= render "shared/flash_messages" %>
+    <%= yield %>
+  <% end %>
 </html>
-  
