--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
 <% provide :title, t(".title") %>
 <body class="hold-transition register-page">
+  <%= toastr_flash %>
   <div id="custom_nav">
     <%= render "shared/custom_navbar" %>
   </div>
