--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="main-footer">
   <div class="float-right d-none d-sm-block">
-    <b><%= t ".version" %> </b> 3.0.5
+    <b><%= t ".version" %> </b> 0.0.1
   </div>
-  <strong><%= t ".copyright" %> &copy; 2014-2019</strong>
+  <strong><%= t ".copyright" %> &copy; 2020</strong>
 </footer>
