--- a/app/views/layouts/_user_sidebar.html.erb
+++ b/app/views/layouts/_user_sidebar.html.erb
@@ -1,8 +1,7 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
   <a href="#" class="brand-link">
     <%= image_tag "/images/AdminLTELogo.png",
-        class: "brand-image img-circle elevation-3",
-        style:"opacity: .8" %>
+        class: "brand-image img-circle elevation-3" %>
     <span class="brand-text font-weight-light"> <%= t ".airport_store" %> </span>
   </a>
   <div class="sidebar">
