--- a/app/assets/stylesheets/abstract/_variables.scss
+++ b/app/assets/stylesheets/abstract/_variables.scss
@@ -8,4 +8,6 @@ $header-border: rgba(0,0,255,0.4);
 $yellow-1: #ffbc00;
 $link: #2f2ff1;
 $purple-1: #ccf;
+$purple-link: #8E6BC6;
+$purple-link-hover: #AE8EE0;
 
