--- a/app/assets/stylesheets/slot/slotinfo.scss
+++ b/app/assets/stylesheets/slot/slotinfo.scss
@@ -1,3 +1,4 @@
+.slot-info {
 * {
   margin: 0;
   padding: 0;
@@ -274,4 +275,5 @@ section.content .main .main__left .text a {
 section.content .main .main__right {
   width: 40%;
   margin-top: 20px;
+}
 }
