--- a/app/views/terminals/show.html.erb
+++ b/app/views/terminals/show.html.erb
@@ -1,31 +1,72 @@
 <% provide :title, t(".title") %>
-  <div class="container-fluid" id="terminal-content">
-    <div class="row" id="slot-content" >
-    <div class="col-6 mt-5">
-      <div>
-        <h1 class="mb-5">Sảnh bay sân bay Noi Bai</h1>
-        <% @slots.each do |slot| %>
-          <%= link_to slot do %>
-          <div class="row mt-3 slot-card">
-            <div class="col-5" id="slot-img-box">
-              <img src="https://media.timeout.com/images/105634590/630/472/image.jpg" class="slot-img">
-            </div>
-            <div class="col-7 pl-4">
-              <div class="slot-name">
-                <h3><%= slot.name %></h3>
+  <main>
+    <section class="ray-page container">
+      <ul class="ray-breadcrumbs">
+        <li class="ray-breadcrumb">
+          <a href="#"><%= t ".airport_terminal" %> </a>
+        </li>
+      </ul>
+    </section>
+    <section class="content container">
+      <div class="header">
+        <div class="header__right">
+          <h1><%= @terminal.name %></h1>
+          <span>
+            <div class="dropdown show">
+              <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <%= t ".terminal_dropdown" %>
+              </a>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <% Terminal.all.each do |terminal| %>
+                  <%= link_to terminal, class: "dropdown-item" do %>
+                    <p><%= terminal.name %></p>
+                  <% end %>
+                <% end %>
               </div>
-              <div class="terminal-name"><%= slot.terminal.name %></div>
-              <div class="">other</div>
+            </div>
+          </span>
+        </div>
+        <div class="header__left">
+          <p> <%= t ".address" %> </p>
+        </div>
+      </div>
+      <div class="main">
+        <div class="main__left">
+          <div class="products">
+            <% @slots.each do |slot| %>
+              <%= link_to slot do %>
+                <div class="product">
+                  <%= link_to slot do %>
+                    <%= image_tag "https://www.mlive.com/resizer/YEU5ywOU3--21qj7nAlYwDOT_64=/1280x0/smart/arc-anglerfish-arc2-prod-advancelocal.s3.amazonaws.com/public/4G27NNGGWJDYHIBIL2YJQ6DVPA.jpg"%>
+                  <% end %>
+                  <div class="product__title">
+                    <%= link_to slot.name, slot %>
+                    <i class="fas fa-star"> <%= Settings.info.star %> </i>
+                  </div>
+                  <p class="product__text"><%= slot.terminal.name %> </p>
+                </div>
+              <% end %>
+            <% end %>
+            <div class="mt-4">
+              <%= paginate @slots, theme: "twitter-bootstrap-4", pagination_class: "pagination-sm",nav_class: "d-inline-b" %>
+            </div>
+            <div class="footer">
+              <h2><%= t ".terminal_information" %> </h2>
+              <p class="text__header"><%= t ".name" %>: <%= @terminal.name %></p>
+              <span class="text__header"><%= t ".area" %>: <%= @terminal.area %> <span>m<sup>2</sup></span></p>
+
+              <i class="fas fa-phone"><%= Settings.info.phone %> </i>
             </div>
           </div>
-          <% end %>
-        <% end %>
-        <%= paginate @slots, theme: "twitter-bootstrap-4", pagination_class: "pagination-sm",nav_class: "d-inline-b" %>
+          <div class="text">
+            <h2> <%= t ".description_title" %> </h2>
+            <p><%= @terminal.description %></p>
+            <a href="#"> <%= t ".address" %> </a>
+          </div>
+        </div>
+        <div class="main__right">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3719.3309818186235!2d105.80198221533867!3d21.218719886641136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135021539afc453%3A0xe6e0faa3520226b4!2zQ-G6o25nIGjDoG5nIGtow7RuZyBxdeG7kWMgdOG6vyBO4buZaSBCw6Bp!5e0!3m2!1svi!2s!4v1598076515519!5m2!1svi!2s" width="100%" height="800" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
       </div>
-    </div>
-    <div class="col-6">
-
-    </div>
-    </div>
-  </div>
-</div>
+    </section>
+  </main>
