--- a/app/assets/stylesheets/slot/list_slot.scss
+++ b/app/assets/stylesheets/slot/list_slot.scss
@@ -2,6 +2,7 @@
 @import 'libs/all.css';
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
 * {
   margin: 0;
   padding: 0;
@@ -132,7 +133,6 @@ section.content .header .header__right span {
 
 section.content .header .header__left p {
   display: inline-block;
-  margin-top: 80px;
   font-size: 18px;
   font-family: "Apercu",Avenir,-apple-system,BlinkMacSystemFont,"Helvetica Neue",Helvetica,"Calibri","Roboto",Arial,sans-serif;
 }
@@ -290,7 +290,6 @@ section.content .main .main__left .text a {
 
 section.content .main .main__right {
   width: 40%;
-  margin-top: 20px;
 }
 
 .navbar-right {
@@ -309,4 +308,9 @@ section.content .main .main__right {
   margin-left: 0 !important;
   margin-right: 0 !important;
   width: 170px;
+  margin-top: 5px;
+}
+
+.home_main_right {
+  margin-top: 20px !important;
 }
