--- a/app/views/slots/show.html.erb
+++ b/app/views/slots/show.html.erb
@@ -1,117 +1,135 @@
 <% provide :title, t(".title") %>
-  <div class="container-fluid" id="terminal-content">
-    <div class="container">
-      <div class="row" >
-        <div class="col-lg-8" id="left-box">
-          <div class="mt-2">
-            <p class="slot-name"><b>Slot name</b></p>
-          </div>
-          <div class="mt-2">
-            <div class="bd-example">
-              <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                  <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                  <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="https://media.timeout.com/images/105634590/630/472/image.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>First slide label</h5>
-                      <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://media.timeout.com/images/105634590/630/472/image.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Second slide label</h5>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <img src="https://media.timeout.com/images/105634590/630/472/image.jpg" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Third slide label</h5>
-                      <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                    </div>
-                  </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="description mt-5">
-            <h3>Thông tin slot</h3>
-            <p>bsdjkasdjsjjdjdjddjdjdjdjdjdjdjdjdjdjdjdjdjdj dj</p>
-          </div>
-          <ul class="preview-amenities ray-grid">
-            <li class="preview-amenity ray-grid__cell--span-2 ray-grid__cell--span-3-desktop">
-              <div class="preview-amenity__icon">
-                <p>Name</p>
-              </div>
-              <span data-test-id="amenity-name" class="preview-amenity__name ray-text--body-small">Enhanced cleaning services</span>
-            </li>
-            <li class="preview-amenity ray-grid__cell--span-2 ray-grid__cell--span-3-desktop">
-              <div class="preview-amenity__icon">
-                <img data-test-id="amenity-img" alt="" class="amenity-img" src="/vanilla-assets/images/icons/amenities/dispenser.2e87e17ad1feb09bd9743473eca99be9.svg"/>
-              </div>
-              <span data-test-id="amenity-name" class="preview-amenity__name ray-text--body-small">Hands-free dispensers</span>
-            </li>
-            <li class="preview-amenity ray-grid__cell--span-2 ray-grid__cell--span-3-desktop">
-              <div class="preview-amenity__icon">
-                <img data-test-id="amenity-img" alt="" class="amenity-img" src="/vanilla-assets/images/icons/amenities/hvac.9485158cfde1de67740591e959f9dacd.svg"/>
-              </div>
-              <span data-test-id="amenity-name" class="preview-amenity__name ray-text--body-small">Enhanced HVAC standards</span>
-            </li>
-            <li class="preview-amenity ray-grid__cell--span-2 ray-grid__cell--span-3-desktop">
-              <div class="preview-amenity__icon">
-                <img data-test-id="amenity-img" alt="" class="amenity-img" src="/vanilla-assets/images/icons/amenities/high_speed_wi_fi.0e7650c5fd98bdb66f5f834515cfd460.svg"/>
-              </div>
-              <span data-test-id="amenity-name" class="preview-amenity__name ray-text--body-small">High-speed Wi-Fi</span>
-            </li>
-        </ul>
+  <main>
+    <section class="ray-page container">
+      <ul class="ray-breadcrumbs">
+        <li class="ray-breadcrumb">
+          <%= t ".search" %>
+        </li>
+      </ul>
+    </section>
+    <section class="content container">
+      <div class="header">
+        <div class="header__right">
+          <h5 id="slot_name_title"><%= @slot.name %></h5>
+          <i class="fas fa-star">5.0</i>
+          <a href="#">16 <%= t ".review" %></a>
         </div>
-        <div class="col-lg-4 ml-5 sidebar-slot">
-          <div class="row mb-4">
-            <button type="submit" class="ray-button ray-button--secondary" id="book-tour-btn" data-test-id="book-tour-btn">
-              Đăng ký thuê
-            </button>
+        <div class="header__left">
+          <p> <%= t ".address" %> </p>
+        </div>
+      </div>
+      <div class="main">
+        <div class="main__left">
+          <img src="https://www.mlive.com/resizer/YEU5ywOU3--21qj7nAlYwDOT_64=/1280x0/smart/arc-anglerfish-arc2-prod-advancelocal.s3.amazonaws.com/public/4G27NNGGWJDYHIBIL2YJQ6DVPA.jpg" alt="image">
+          <div class="pricing" id="p-info">
+            <div class="p-info">
+              <div class="p-info-item">
+                <li class="p-info-img fas fa-warehouse"></li>
+                <div class=""> <%= t ".area" %> <%= @slot.area %><span>m<sup>2</sup></span> </div>
+              </div>
+            </div>
+            <div class="p-info">
+              <div class="p-info-item">
+                <li class="p-info-img fas fa-money-check-alt"></li>
+                <div class=""> <%= t ".price" %> <%= @slot.price %> </div>
+              </div>
+            </div>
+            <div class="p-info">
+              <div class="p-info-item">
+                <li class="p-info-img fas fa-calendar-check"></li>
+                <div class=""> <%= t ".status" %> </div>
+              </div>
+            </div>
           </div>
-          <div>
-            <div class="info-title">
-              <h3>Thông tin terminal</h3>
+          <%# <div class="pricing">
+            <h2>Chỗ làm việc còn trống</h2>
+            <span>Sửa chữa</span>
+            <span>Ngày chuyển vào</span>
+          </div> %>
+          <%# <div class="pricing">
+            <h2>Gợi ý</h2>
+          </div> %>
+          <%# <div class="products" id="slot-info-products">
+            <div class="product" id="slot-info-product">
+              <img id="slot-info-product-img"src="https://www.mlive.com/resizer/YEU5ywOU3--21qj7nAlYwDOT_64=/1280x0/smart/arc-anglerfish-arc2-prod-advancelocal.s3.amazonaws.com/public/4G27NNGGWJDYHIBIL2YJQ6DVPA.jpg" alt="image">
+              <div class="product__detail">
+                <h3>Văn phòng riêng</h3>
+                <p>Không gian văn phòng có khóa cho các nhóm với mọi quy mô</p>
+                <p class="pay">chỉ từ ₫26,100,000/mo</p>
+              </div>
             </div>
-            <div class="content-s mt-6">
-              <ul>
-                <li>
-                  <strong>Name</strong>
-                  <span><%= @slot.name %></span>
-                </li>
-                <li>
-                  <strong>Area</strong>
-                  <span><%= @slot.name %></span>
-                </li>
-                <li>
-                  <strong>Price</strong>
-                  <span><%= @slot.name %></span>
-                </li>
-                <li>
-                  <strong>Description</strong>
-                  <span><%= @slot.description %></span>
-                </li>
-              </ul>
+            <div class="product">
+              <img src="./image/private_office.7c259f1fa51705d69e43439b2280aa9a.svg" alt="image">
+              <div class="product__detail">
+                <h3>Văn phòng riêng</h3>
+                <p>Không gian văn phòng có khóa cho các nhóm với mọi quy mô</p>
+                <p class="pay">chỉ từ ₫26,100,000/mo</p>
+              </div>
             </div>
+            <div class="product">
+              <img src="./image/private_office.7c259f1fa51705d69e43439b2280aa9a.svg" alt="image">
+              <div class="product__detail">
+                <h3>Văn phòng riêng</h3>
+                <p>Không gian văn phòng có khóa cho các nhóm với mọi quy mô</p>
+                <p class="pay">chỉ từ ₫26,100,000/mo</p>
+              </div>
+            </div>
+          </div> %>
+          <div class="pricing">
+            <h2><%= t ".amenities" %></h2>
+            <p><%= t ".mission" %></p>
+          </div>
+          <div class="previews">
+            <div class="preview">
+              <li class="p-info-img fas fa-hand-sparkles"></li>
+              <p><%= t ".clean" %></p>
+            </div>
+            <div class="preview">
+              <li class="p-info-img fas fa-balance-scale"></li>
+              <p><%= t ".business" %></p>
+            </div>
+            <div class="preview">
+              <li class="p-info-img fas fa-dollar-sign"></li>
+              <p><%= t ".affordable" %></p>
+            </div>
+            <div class="preview">
+              <li class="p-info-img fas fa-smile-wink"></li>
+              <p><%= t ".location" %></p>
+            </div>
+            <%# <div class="preview">
+              <img src="./image/cleaning_services.55c904c9d15e95c5bca848be7ea6f385.svg" alt="icon">
+              <p>Thị trường kinh doanh lành mạnh</p>
+            </div>
+            <div class="preview">
+              <img src="./image/cleaning_services.55c904c9d15e95c5bca848be7ea6f385.svg" alt="icon">
+              <p>Dịch vụ vệ sinh nâng cao</p>
+            </div>
+            <div class="preview">
+              <img src="./image/cleaning_services.55c904c9d15e95c5bca848be7ea6f385.svg" alt="icon">
+              <p>Dịch vụ vệ sinh nâng cao</p>
+            </div>
+            <div class="preview">
+              <img src="./image/cleaning_services.55c904c9d15e95c5bca848be7ea6f385.svg" alt="icon">
+              <p>Dịch vụ vệ sinh nâng cao</p>
+            </div> %>
+            <a href="https://bit.ly/2CS5Il7" target="_blank"><%= t ".googlemap_link" %></a>
+          </div>
+        </div>
+        <div class="main__right">
+          <div class="lead">
+            <h5><%= t ".interested_in" %></h5>
+            <p><%= t ".mission_content" %></p>
+            <%# <span>Đăng ký thuê ngay</span> %>
+            <button id="button_dangky">
+              <%= t ".hire_now" %>
+            </button>
+            <p class="text__footer"><%= t ".rule" %><a href="#"><%= t ".rule_link" %></a></p>
+          </div>
+          <div class="lead" style="margin-top: 20px;">
+            <h3><%= t ".experience_title" %></h3>
+            <p class="text__footer"><%= t ".experience" %><a href="#"><%= @slot.terminal.employee.email %> </a></p>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</div>
+    </section>
+  </main>
