--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,12 +13,12 @@
           <h1> <%= t ".content_title" %> </h1>
           <span>
             <div class="dropdown show">
-              <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLinkTerminal" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <%= t ".terminal_dropdown" %>
               </a>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuLinkTerminal">
                 <% Terminal.all.each do |terminal| %>
-                  <%= link_to terminal, class: "dropdown-item" do %>
+                  <%= link_to terminal, class: "dropdown-item", id: "dropdownMenuLinkTerminal" do %>
                     <p><%= terminal.name %></p>
                   <% end %>
                 <% end %>
@@ -35,7 +35,7 @@
           <div class="products">
             <% @slots.each do |slot| %>
               <%= link_to slot do %>
-                <div class="product">
+                <div class="product" id="terminalItem">
                   <%= link_to slot do %>
                     <%= image_tag "https://www.mlive.com/resizer/YEU5ywOU3--21qj7nAlYwDOT_64=/1280x0/smart/arc-anglerfish-arc2-prod-advancelocal.s3.amazonaws.com/public/4G27NNGGWJDYHIBIL2YJQ6DVPA.jpg"%>
                   <% end %>
@@ -62,7 +62,7 @@
             <a href="#"> <%= t ".address" %> </a>
           </div>
         </div>
-        <div class="main__right">
+        <div class="main__right home_main_right">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3719.3309818186235!2d105.80198221533867!3d21.218719886641136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135021539afc453%3A0xe6e0faa3520226b4!2zQ-G6o25nIGjDoG5nIGtow7RuZyBxdeG7kWMgdOG6vyBO4buZaSBCw6Bp!5e0!3m2!1svi!2s!4v1598076515519!5m2!1svi!2s" width="100%" height="800" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
       </div>
