[Task][27509][Manager]Xem-chi-tiet-hop-dong

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,3 +103,11 @@
   width: 20px;
   height: auto;
 }
+
+#contract-detail-btn .btn {
+  width: 25%;
+}
+
+#contract-detail {
+  font-size: 2.5rem;
+}
