[TASK][27064]User_list_stores

--- a/app/assets/stylesheets/slot/slot_info.scss
+++ b/app/assets/stylesheets/slot/slot_info.scss
@@ -292,12 +292,12 @@ section.content .main .main__right .lead h3 {
   border-top: 0 !important;
 }
 
-#slot-info-product {
-  width: 100%;
+.slot-info-product {
+  width: 100% !important;
   padding-top: 0 !important;
 }
 
-#slot-info-product-img {
+.slot-info-product-img {
   width: 30% !important;
 }
 
