--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
 // @import 'slot/show.css';
 // @import 'slot/slot_info.scss';
 @import 'slot/list_slot.scss';
+@import 'store/index.scss';
 
  * {
    font-family: sans-serif, "Apercu",Avenir,-apple-system,BlinkMacSystemFont,"Helvetica Neue",Helvetica,"Calibri","Roboto",Arial,"Font Awesome 5 Free" !important;
