--- a/app/views/layouts/_user_navbar.html.erb
+++ b/app/views/layouts/_user_navbar.html.erb
@@ -4,13 +4,17 @@
       <span class="navbar">
         <ul>
           <li><a href="#"> <%= t ".profile" %> </a></li>
-          <li><a href="#"> <%= t ".my_stores" %> </a></li>
+          <li>
+          <%= link_to t(".my_stores"), stores_path(current_user) %>
+          </li>
           <li><a href="#"><%= t ".references" %> </a></li>
         </ul>
       </span>
     </div>
     <div class="navbar-right row">
-      <div class="saved col-6">
+      <div class="col-3">
+      </div>
+      <div class="saved col-3">
         <% if logged_in? %>
           <div class="d-sm-inline-block">
             <%= link_to t(".logout"), logout_path, class: "nav-link" %>
