[TASK][27877]User_store_detail

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 // @import 'slot/slot_info.scss';
 @import 'slot/list_slot.scss';
 @import 'store/index.scss';
+// @import 'store/show.scss';
 
  * {
    font-family: sans-serif, "Apercu",Avenir,-apple-system,BlinkMacSystemFont,"Helvetica Neue",Helvetica,"Calibri","Roboto",Arial,"Font Awesome 5 Free" !important;
