--- a/app/views/layouts/_employee_sidebar.html.erb
+++ b/app/views/layouts/_employee_sidebar.html.erb
@@ -24,7 +24,7 @@
           <% end %>
         </li>
         <li class="nav-item">
-          <%= link_to "#", class: "nav-link" do %>
+          <%= link_to slots_path, class: "nav-link" do %>
             <i class="nav-icon fas fa-th"></i>
             <p><%= t ".slots" %></p>
           <% end %>
