[TASK][27064]User show my stores

--- a/app/assets/stylesheets/abstract/_variables.scss
+++ b/app/assets/stylesheets/abstract/_variables.scss
@@ -11,7 +11,7 @@ $purple-1: #ccf;
 $purple-link: #8E6BC6;
 $purple-link-hover: #AE8EE0;
 $white-1: #D9E4EA;
-$back-1: #000;
+$black-1: #000;
 $white-2: #fff;
 $gray-medium-light-3:#e8e8e8;
 $gray-2: #464646;
