--- a/app/assets/stylesheets/slot/list_slot.scss
+++ b/app/assets/stylesheets/slot/list_slot.scss
@@ -40,7 +40,7 @@ header .logo a {
   display: inline-block;
   margin: 20px 10px 15px 0;
   text-decoration: none;
-  color: $black;
+  color: $black-1;
 }
 
 header .navbar {
