--- a/app/assets/stylesheets/abstract/_variables.scss
+++ b/app/assets/stylesheets/abstract/_variables.scss
@@ -1,4 +1,18 @@
 $gray-medium-light-1: #D7DBDD;
-$gray-medium-light-2: #CACFD2;
+$gray-medium-light-2: hsl(202, 8%, 81%);
 $form-error-red: #dc3545;
 $home-background: rgba(86, 127, 170, 0.76);
+$gray-1: #3e3d3d;
+$gray-medium-light-3: #e6e6e6;
+$header-border: rgba(0,0,255,0.4);
+$yellow-1: #ffbc00;
+$link: #2f2ff1;
+$purple-1: #ccf;
+$purple-link: #8E6BC6;
+$purple-link-hover: #AE8EE0;
+$white-1: #D9E4EA;
+$black-1: #000;
+$white-2: #fff;
+$gray-medium-light-3:#e8e8e8;
+$gray-2: #464646;
+$gray-3: #666;
