--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,113 +1,21 @@
+/*
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
+ * vendor/assets/stylesheets directory can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
+ * files in this directory. Styles in this file should be added after the last require_* statement.
+ * It is generally better to create a new file per style scope.
+ *= require_tree .
+ *= require_self
+ */
 @import 'bootstrap/scss/bootstrap';
 @import 'libs/adminlte.scss';
-@import 'libs/all.css';
 @import 'abstract/_variables.scss';
 @import 'toastr/toastr.scss';
-
-#error_explanation {
-  color: red;
-  ul {
-    color: red;
-  }
-}
-
-.checkbox {
-  span {
-    margin-left: 2px;
-  }
-}
-
-.overview {
-  font-size: 45px;
-  color: $gray-medium-light-1;
-}
-
-#home-content {
-  background-image: url('../../images/bg.jpg');
-  height: 710px;
-}
-
-#home-content-row {
-  background-color: $home-background;
-  height: 710px;
-  color: white;
-  padding-top: 100px;
-  padding-left: 180px;
-}
-
-#view-more {
-  color: white;
-}
-
-#view-more:hover {
-  color: $gray-medium-light-2;
-}
-
-#attendant {
-  margin-left: -50px;
-  width: 613px;
-  height: 613px;
-}
-
-#custom_nav {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  margin: 0;
-  transition: none;
-  nav {
-    padding: 5px 100px;
-  }
-  .brand-image {
-    position: relative;
-    top: -1px;
-    margin-right: 4px;
-  }
-}
-
-#home-content, .login-page, .register-page {
-  background-image: url("../../images/bg.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.login-box, .register-box {
-  margin-top: 70px;
-}
-
-.login-box {
-  width: 450px;
-}
-
-.register-box {
-  width: 700px;
-}
-
-.register-logo {
-  margin-bottom: 10px;
-}
-
-.required:after {
-  content: "*";
-  color: red;
-}
-
-.form_error {
-  margin-top: .25rem;
-  font-size: 80%;
-  color: $form-error-red;
-}
-
-.brand-image {
-  opacity: .8;
-  width: 20px;
-  height: auto;
-}
-
-#contract-detail-btn .btn {
-  width: 25%;
-}
-
-#contract-detail {
-  font-size: 2.5rem;
-}
+@import 'slot/slot_info.scss';
+@import 'slot/list_slot.scss';
+@import 'store/index.scss';
