[TASK][27059]User dang ky thue

--- a/app/views/slots/show.html.erb
+++ b/app/views/slots/show.html.erb
@@ -71,6 +71,7 @@
             <p><%= t ".mission_content" %></p>
             <button id="button_dangky">
               <%= t ".hire_now" %>
+              <%= link_to t(".hihi"), new_store_path %>
             </button>
             <p class="text__footer"><%= t ".rule" %><a href="#"><%= t ".rule_link" %></a></p>
           </div>
